Fri Jan 30 20:42:45 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/DLL_Manager.cpp (ACE_DLL_Handle::open): Correct ACE_TEXT usage
          in AIX case.

        * ace/config-aix-5.x.h: Wrap ACE_DLL_SUFFIX and ACE_LD_SEARCH_PATH
          with ACE_TEXT().

Fri Jan 30 15:02:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ace/Barrier.cpp:
        * ace/Dynamic_Service_Base.cpp:
        * ace/Hash_Map_Manager_T.cpp:
        * ace/Malloc.cpp:
        * ace/Malloc_T.cpp:
        * ace/Mutex.cpp:
        * ace/Pipe.cpp:
        * ace/Semaphore.cpp:
        * ace/TSS_T.cpp:
          Removed some unnecessary ACE_DEBUG statements.

Fri Jan 30 12:55:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
        * tests/tests.mpc:
        * tests/Bug_3532_Regression.cpp:
          Added a new test for bugzilla 3532. This bug is not fixed, just
          integrating the regression test. Thanks to Martin Gaus <Gaus at gmx dot de>
          for creating this test

Fri Jan 30 12:38:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
        * ace/Log_Msg.cpp:
          Fixed unicode logging problems on non windows platforms

Fri Jan 30 11:54:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Intrusive_List.cpp:
          Just have one exit point in the methods

        * ace/Singleton.cpp:
        * ace/Singleton.h:
          Added a static close() which can be used to explicitly close
          an ACE_Singleton. It will then deregister from the object manager
          from cleanup. This way an application developer could close his
          singletons explicitly, but keep the safety that ACE will do that
          also when the application does a shutdown

        * tests/run_test.lst:
        * tests/tests.mpc:
        * tests/Singleton_Test.cpp:
          Added a new test for the close

Thu Jan 29 18:48:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
